# whatapCli

./: .gitignore  AGENTS.md  APM_분석가이드.md  APM_사용가이드.md  CLAUDE.md  Cargo.toml  DB_분석가이드.md  DB_사용가이드.md  README.md  모바일_분석가이드.md  모바일_사용가이드.md  브라우저_분석가이드.md  브라우저_사용가이드.md
src/: main.rs
src/cli/: output.rs
src/cli/commands/: alert.rs  dsym.rs  info.rs  log.rs  login.rs  logout.rs  mod.rs  mxql.rs  proguard.rs  project.rs  projects.rs  snapshot.rs  sourcemaps.rs  spot.rs  stat.rs  step.rs  trace.rs  whoami.rs
src/core/: auth.rs  client.rs  config.rs  error.rs  mod.rs  symbol.rs
src/types/: auth.rs  config.rs  mod.rs  project.rs  symbol.rs
