[package]
name = "whatap-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for WhatAp monitoring platform"

[[bin]]
name = "whatap"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "cookies", "stream", "native-tls"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Output
tabled = "0.17"
colored = "3"
indicatif = "0.17"

# Config & Auth
dirs = "6"

# File handling
glob = "0.3"
mime_guess = "2"

# Time
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Password input
rpassword = "7"

# TTY detection
atty = "0.2"
